# icloud-dedupe

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.beads/: .gitignore  .migration-hint-ts  issues.jsonl
docs/: tui-design.md
docs/plans/: beads-setup.md  development-roadmap.md  testing-strategy.md
docs/plans/archived/: 2026-02-17-channel-event-architecture.atomized.md
examples/: candidates.rs  scan.rs
src/: hash.rs  lib.rs  main.rs  pattern.rs  platform.rs  quarantine.rs  report.rs  scanner.rs  types.rs
src/tui/: mod.rs  run.rs  state.rs  theme.rs  update.rs  view.rs
