[package]
name = "icloud-dedupe"
version = "0.1.0"
edition = "2024"
authors = ["Marc Gris"]
description = "CLI tool for detecting and removing iCloud sync conflict duplicates on macOS"
repository = "https://github.com/m-gris/icloud-dedupe"
license = "MIT"
keywords = ["icloud", "macos", "duplicate", "dedup", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
blake3 = "1"
dirs = "6.0.0"
humansize = "2.1.3"
indicatif = { version = "0.18.3", features = ["rayon"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
